logs/microblog.log
2025-04-03 15:59:50,546 ERROR: Exception on / [GET] [in C:\Users\Ethan\PycharmProjects\Travel Buddy\.venv\Lib\site-packages\flask\app.py:875]
Traceback (most recent call last):
  File "C:\Users\Ethan\PycharmProjects\Travel Buddy\.venv\Lib\site-packages\flask\app.py", line 1511, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Ethan\PycharmProjects\Travel Buddy\.venv\Lib\site-packages\flask\app.py", line 919, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Ethan\PycharmProjects\Travel Buddy\.venv\Lib\site-packages\flask\app.py", line 917, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Ethan\PycharmProjects\Travel Buddy\.venv\Lib\site-packages\flask\app.py", line 902, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Ethan\PycharmProjects\Travel Buddy\app\routes.py", line 15, in index
    return render_template('index.html', title='Home')
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Ethan\PycharmProjects\Travel Buddy\.venv\Lib\site-packages\flask\templating.py", line 150, in render_template
    return _render(app, template, context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Ethan\PycharmProjects\Travel Buddy\.venv\Lib\site-packages\flask\templating.py", line 127, in _render
    app.update_template_context(context)
  File "C:\Users\Ethan\PycharmProjects\Travel Buddy\.venv\Lib\site-packages\flask\app.py", line 530, in update_template_context
    context.update(self.ensure_sync(func)())
                   ^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Ethan\PycharmProjects\Travel Buddy\.venv\Lib\site-packages\flask_login\utils.py", line 405, in _user_context_processor
    return dict(current_user=_get_user())
                             ^^^^^^^^^^^
  File "C:\Users\Ethan\PycharmProjects\Travel Buddy\.venv\Lib\site-packages\flask_login\utils.py", line 370, in _get_user
    current_app.login_manager._load_user()
  File "C:\Users\Ethan\PycharmProjects\Travel Buddy\.venv\Lib\site-packages\flask_login\login_manager.py", line 347, in _load_user
    raise Exception(
Exception: Missing user_loader or request_loader. Refer to http://flask-login.readthedocs.io/#how-it-works for more info.
2025-04-03 16:00:51,071 INFO: Microblog startup [in C:\Users\Ethan\PycharmProjects\Travel Buddy\app\__init__.py:28]
2025-04-16 10:33:51,303 INFO: Microblog startup [in C:\Users\Ethan\PycharmProjects\Travel Buddy\app\__init__.py:45]
2025-04-16 12:39:56,846 INFO: Microblog startup [in C:\Users\Ethan\PycharmProjects\Travel Buddy\app\__init__.py:43]
2025-04-16 12:42:01,881 INFO: Microblog startup [in C:\Users\Ethan\PycharmProjects\Travel Buddy\app\__init__.py:43]
2025-04-16 12:42:04,859 INFO: Microblog startup [in C:\Users\Ethan\PycharmProjects\Travel Buddy\app\__init__.py:43]
2025-04-16 12:43:13,319 INFO: Microblog startup [in C:\Users\Ethan\PycharmProjects\Travel Buddy\app\__init__.py:43]
2025-04-16 12:44:01,873 INFO: Microblog startup [in C:\Users\Ethan\PycharmProjects\Travel Buddy\app\__init__.py:43]
2025-04-16 12:44:29,342 INFO: Microblog startup [in C:\Users\Ethan\PycharmProjects\Travel Buddy\app\__init__.py:43]
2025-04-16 12:44:48,833 INFO: Microblog startup [in C:\Users\Ethan\PycharmProjects\Travel Buddy\app\__init__.py:43]
2025-04-16 12:46:17,564 INFO: Microblog startup [in C:\Users\Ethan\PycharmProjects\Travel Buddy\app\__init__.py:43]
2025-04-16 12:46:21,474 INFO: Microblog startup [in C:\Users\Ethan\PycharmProjects\Travel Buddy\app\__init__.py:43]
2025-04-16 12:46:28,117 INFO: Microblog startup [in C:\Users\Ethan\PycharmProjects\Travel Buddy\app\__init__.py:43]
2025-04-16 12:47:12,082 INFO: Microblog startup [in C:\Users\Ethan\PycharmProjects\Travel Buddy\app\__init__.py:43]
2025-04-16 12:47:15,771 INFO: Microblog startup [in C:\Users\Ethan\PycharmProjects\Travel Buddy\app\__init__.py:43]
2025-04-16 12:47:18,909 INFO: Microblog startup [in C:\Users\Ethan\PycharmProjects\Travel Buddy\app\__init__.py:43]
2025-04-16 12:54:14,910 INFO: Microblog startup [in C:\Users\Ethan\PycharmProjects\Travel Buddy\app\__init__.py:43]
2025-04-16 12:54:24,359 INFO: Microblog startup [in C:\Users\Ethan\PycharmProjects\Travel Buddy\app\__init__.py:43]
2025-04-16 12:56:33,489 INFO: Microblog startup [in C:\Users\Ethan\PycharmProjects\Travel Buddy\app\__init__.py:43]
2025-04-16 12:57:17,878 INFO: Microblog startup [in C:\Users\Ethan\PycharmProjects\Travel Buddy\app\__init__.py:43]
2025-04-16 12:57:20,780 INFO: Microblog startup [in C:\Users\Ethan\PycharmProjects\Travel Buddy\app\__init__.py:43]
2025-04-16 14:58:41,183 INFO: Microblog startup [in C:\Users\Ethan\PycharmProjects\Travel Buddy\app\__init__.py:43]
2025-04-16 15:13:53,524 INFO: Microblog startup [in C:\Users\Ethan\PycharmProjects\Travel Buddy\app\__init__.py:43]
2025-04-16 15:13:55,957 ERROR: Exception on / [GET] [in C:\Users\Ethan\PycharmProjects\Travel Buddy\.venv\Lib\site-packages\flask\app.py:875]
Traceback (most recent call last):
  File "C:\Users\Ethan\PycharmProjects\Travel Buddy\.venv\Lib\site-packages\flask\app.py", line 1511, in wsgi_app
    response = self.full_dispatch_request()
               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Ethan\PycharmProjects\Travel Buddy\.venv\Lib\site-packages\flask\app.py", line 919, in full_dispatch_request
    rv = self.handle_user_exception(e)
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Ethan\PycharmProjects\Travel Buddy\.venv\Lib\site-packages\flask\app.py", line 917, in full_dispatch_request
    rv = self.dispatch_request()
         ^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Ethan\PycharmProjects\Travel Buddy\.venv\Lib\site-packages\flask\app.py", line 902, in dispatch_request
    return self.ensure_sync(self.view_functions[rule.endpoint])(**view_args)  # type: ignore[no-any-return]
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Ethan\PycharmProjects\Travel Buddy\app\routes.py", line 15, in index
    return render_template('index.html', title='Home')
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Ethan\PycharmProjects\Travel Buddy\.venv\Lib\site-packages\flask\templating.py", line 150, in render_template
    return _render(app, template, context)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Ethan\PycharmProjects\Travel Buddy\.venv\Lib\site-packages\flask\templating.py", line 131, in _render
    rv = template.render(context)
         ^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\Users\Ethan\PycharmProjects\Travel Buddy\.venv\Lib\site-packages\jinja2\environment.py", line 1295, in render
    self.environment.handle_exception()
  File "C:\Users\Ethan\PycharmProjects\Travel Buddy\.venv\Lib\site-packages\jinja2\environment.py", line 942, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "C:\Users\Ethan\PycharmProjects\Travel Buddy\app\templates\index.html", line 1, in top-level template code
    {% extends "base.html" %}
  File "C:\Users\Ethan\PycharmProjects\Travel Buddy\.venv\Lib\site-packages\jinja2\environment.py", line 942, in handle_exception
    raise rewrite_traceback_stack(source=source)
  File "C:\Users\Ethan\PycharmProjects\Travel Buddy\app\templates\base.html", line 16, in template
    <a class="navbar-brand" href="{{ url_for('register'}}">Register</a>
    ^^^^^^^^^^^^^^^^^^^^^^^^^
jinja2.exceptions.TemplateSyntaxError: unexpected '}', expected ')'
2025-04-16 15:14:45,043 INFO: Microblog startup [in C:\Users\Ethan\PycharmProjects\Travel Buddy\app\__init__.py:43]
2025-04-16 15:15:58,874 INFO: Microblog startup [in C:\Users\Ethan\PycharmProjects\Travel Buddy\app\__init__.py:43]
2025-04-16 15:16:20,795 INFO: Microblog startup [in C:\Users\Ethan\PycharmProjects\Travel Buddy\app\__init__.py:43]
2025-04-16 15:17:22,197 INFO: Microblog startup [in C:\Users\Ethan\PycharmProjects\Travel Buddy\app\__init__.py:43]
